test/language/errors/errors_loop.hm
# @exception for loop error: expected an array or table but found an integer

for x in 24 { echo x }
